--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -33,6 +33,17 @@ font-family: Arial, Helvetica, sans-serif;
 	clear:left;
 }
 
+.caption {
+	h3 {
+		font-size: 17px;
+		margin: 2px;
+	}
+	p {
+		font-size: 15px;
+		margin: 0px;
+	}
+}
+
 .col-md-6 {
 	h3 {
 		font-size: 45px;
