--- a/app/views/listings/seller.html.erb
+++ b/app/views/listings/seller.html.erb
@@ -1,39 +1,39 @@
-<div class="center">
-<h1>Listing listings</h1>
-
-<table>
+<table class="table table-striped table-bordered">
   <thead>
     <tr>
-      <th>Image</th>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Price</th>
-      <th colspan="3"></th>
+      <th class="center">Image</th>
+      <th class="center">Name</th>
+      <th class="center">Description</th>
+      <th class="center">Price</th>
+      <th class="center">Action</th>
+      
     </tr>
   </thead>
 
-  <div class="row">
-    <% @listings.each do |listing| %>
-    <div class="col-md-3">
-      <div class="thumbnail">
-        <%= link_to image_tag(listing.image.url), listing %>
-        
-      <div class="caption"
-        <h3><%= listing.name %></h3>
-        <p><%= number_to_currency(listing.price) %></p>
-        <p><%= "Sold By #{listing.user.name}" %></p>
-        
-        <% if (user_signed_in?) && (current_user == listing.user) %>
-        <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %>
-        <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>
-        <% end %>
-      </div>
-    </div>
-  </div>
-    <% end %>
-  </div>
-  </tbody>
+  <% @listings.each do |listing| %>
+  <tr>
+    <td><%= image_tag listing.image.url(:thumb) %></td>
+    <td><%= listing.name %></td>
+    <td><%= listing.description %></td>
+    <td><%= number_to_currency(listing.price) %></td>
+    <td>
+      <div class="btn-group">
+          <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+            Action <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" role="menu">
+            <li><%= link_to "View", listing, class: "btn btn-link" %></li>
+            <li><%= link_to "Edit", edit_listing_path(listing), class: "btn btn-link" %></li>
+            <li><%= link_to 'Destroy', listing, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-link" %></li>
+          </ul>
+        </div>
+      
+    </td>
+  </tr>
+  <% end %>
 </table>
+
+
 
 <br>
 <% if user_signed_in? %>
