--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -56,3 +56,9 @@ font-family: Arial, Helvetica, sans-serif;
 	}
 }
 
+.jumbotron {
+	background-image: url('jumbotron.jpg');
+	h1, h2 {
+	font-family: guardian-egyptt, georgia, serif;
+	}
+}
