--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,6 +1,9 @@
-<div class="center">
-<h1>Listing listings</h1>
+<div class="jumbotron">
+<center><h1>Food Delivered To You</h1>
+<h3>Order from any local restaurant - We'll pick it up and deliver it to you</h3></center>
+</div>
 
+<div class="center">
 <table>
   <thead>
     <tr>
