--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -57,7 +57,7 @@ font-family: Arial, Helvetica, sans-serif;
 }
 
 .jumbotron {
-	background-image: url('jumbotron.jpg');
+	background-image: url('https://dl.dropboxusercontent.com/s/2oceqo8arurpxut/jumbotron.jpg');
 	h1, h2 {
 	font-family: guardian-egyptt, georgia, serif;
 	}
